@@ -14,6 +14,9 @@ Release 2.4.1 - 2014-06-23
 
   BUG FIXES 
 
+    HDFS-7309. XMLUtils.mangleXmlString doesn't seem to handle less than sign.
+    (Colin Patrick McCabe via raviprak)
+
     HDFS-7287. The OfflineImageViewer (OIV) can output invalid XML depending on
     the filename (Ravi Prakash via Colin P. McCabe)
 
